--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+/* Imports */
 @import url('https://fonts.googleapis.com/css2?family=Crete+Round&family=Inter&family=Lato&family=Poppins&display=swap%27');
 
 *,
@@ -32,12 +33,23 @@ p {
   width: 100%;
 }
 
+form {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid rgba(220, 220, 220, 1);
+}
+
+form i {
+  color: rgba(150, 150, 150, 1);
+  padding-right: 1.5rem;
+}
+
 input {
   width: 100%;
   border: none;
   padding: 1.5rem;
   font-size: 1rem;
-  border-bottom: 1px solid rgba(220, 220, 220, 1);
+  border-bottom: transparent;
 }
 
 input::placeholder {
@@ -45,7 +57,11 @@ input::placeholder {
 }
 
 input:focus {
-  outline-color: grey;
+  outline: none;
+}
+
+footer {
+  display: none;
 }
 
 .body {
@@ -54,6 +70,10 @@ input:focus {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
+}
+
+.hide {
+  display: none !important;
 }
 
 .todo-list-container {
@@ -71,6 +91,19 @@ input:focus {
   border-bottom: 1px solid rgba(220, 220, 220, 1);
 }
 
+.input-add-task {
+  padding: 1.5rem;
+}
+
+.todo-list i {
+  width: 20px;
+}
+
+.remove-button {
+  border: none;
+  height: 18px;
+}
+
 .button {
   display: flex;
   justify-content: center;
@@ -79,6 +112,11 @@ input:focus {
   border: none;
   padding: 1.5rem;
   border-bottom: 1px solid rgba(220, 220, 220, 1);
+  transition: background-color 500ms ease-out;
+}
+
+.button:active {
+  background-color: rgba(210, 210, 210, 1);
 }
 
 .font-awesome-icon {
