--- a/src/index.css
+++ b/src/index.css
@@ -1,136 +1,144 @@
-/* Imports */
-@import url('https://fonts.googleapis.com/css2?family=Crete+Round&family=Inter&family=Lato&family=Poppins&display=swap%27');
-
-*,
-*::before,
-*::after {
-  padding: 0;
+* {
   margin: 0;
-  box-sizing: inherit;
-}
-
-html {
-  box-sizing: border-box;
+  padding: 0;
 }
 
 body {
-  background-color: rgb(204, 204, 240);
-  font-family: Arial, Helvetica, sans-serif;
-  color: rgb(48, 46, 46);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #e0dfe2;
+  font-family: "Poppins", sans-serif;
 }
 
-button {
-  font-family: Arial, Helvetica, sans-serif;
-  color: rgba(48, 46, 46);
-  font-size: 1rem;
-}
-
-h1 {
-  font-size: 1.5rem;
-}
-
-p {
+.toDo {
   width: 100%;
+}
+
+.todo-list {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  justify-content: center;
+  align-items: flex-start;
+  border: 1px solid black;
+  background: #fff;
+  width: 60%;
+  height: 100%;
+  margin-top: 10%;
+  box-shadow: 1px 1px 1px 2px rgba(0, 0, 0, 0.438);
+}
+
+.heading {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  background: rgba(9, 9, 121, 1);
+}
+
+.heading h1 {
+  font-size: 25px;
+  font-weight: 900;
+  padding: 15px;
+  width: 100%;
+  color: #fff;
+}
+
+.listForm {
+  list-style: none;
+  width: 100%;
+}
+
+.input {
+  font-size: 18px;
+  outline: none;
+  border: none;
+  font-style: italic;
+  font-weight: 100;
+  padding: 20px 20px;
+  width: 100%;
+}
+
+.breakline {
+  width: 100%;
+}
+
+.clear-btn {
+  align-self: center;
+  text-align: center;
+  background: rgba(9, 9, 121, 1);
+  color: #fff;
+  padding: 15px;
+  cursor: pointer;
+}
+
+.clear-btn:hover {
+  color: #fd1d1d;
+  text-decoration: underline;
+}
+
+.second-part {
+  width: 100%;
+}
+
+.items {
+  display: flex;
+  flex-direction: column;
+}
+
+.update-status {
+  cursor: pointer;
+  color: #fdbb2d;
+}
+
+.delete-activity {
+  margin-right: 15px;
+  margin-left: auto;
+  cursor: pointer;
+  color: #fdbb2d;
+}
+
+.activity {
+  margin-left: 10px;
+  width: 100%;
+}
+
+.list-item p.completed {
+  text-decoration-line: line-through;
+  color: rgba(0, 0, 0, 0.45);
+}
+
+.list-item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px 20px;
+  background: #3670ec;
+  color: #fff;
+}
+
+.input-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 form {
   display: flex;
-  justify-content: space-between;
-  border-bottom: 1px solid rgba(220, 220, 220, 1);
-}
-
-form i {
-  color: rgba(150, 150, 150, 1);
-  padding-right: 1.5rem;
-}
-
-input {
-  width: 100%;
-  border: none;
-  padding: 1.5rem;
-  font-size: 1rem;
-  border-bottom: transparent;
-}
-
-input::placeholder {
-  font-style: italic;
-}
-
-input:focus {
-  outline: none;
-}
-
-footer {
-  display: none;
-}
-
-.body {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-}
-
-.hide {
-  display: none !important;
-}
-
-.todo-list-container {
-  width: 500px;
-  max-width: 500px;
-  background-color: white;
-  box-shadow: 0 0 30px rgba(150, 150, 150, 0.25);
-}
-
-.row {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 1.5rem;
-  border-bottom: 1px solid rgba(220, 220, 220, 1);
-}
-
-.input-add-task {
-  padding: 1.5rem;
-}
-
-.todo-list i {
-  width: 20px;
-}
-
-.remove-button {
-  border: none;
-  height: 18px;
-}
-
-.button {
-  display: flex;
-  justify-content: center;
   align-items: center;
   width: 100%;
-  border: none;
-  padding: 1.5rem;
-  border-bottom: 1px solid rgba(220, 220, 220, 1);
-  transition: background-color 500ms ease-out;
 }
 
-.button:active {
-  background-color: rgba(210, 210, 210, 1);
+.Enter {
+  margin-right: 20px;
+  margin-left: auto;
+  cursor: pointer;
+  color: rgb(131, 58, 180);
 }
 
-.font-awesome-icon {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.checkbox {
-  width: fit-content;
-  margin-right: 1rem;
-}
-
-.strike-through {
-  text-decoration: line-through;
-  color: rgba(150, 150, 150, 1);
+.loop {
+  margin-right: 20px;
+  margin-left: auto;
+  cursor: pointer;
+  color: rgb(131, 58, 180);
 }
